# projectghost

./: .env.example  .gitignore  Dockerfile  Modelfile  README.md  docker-compose.yml  main.py  main_cognitive.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: activities.yaml  personas.yaml  prompts.yaml
ghost/: __init__.py
ghost/autonomy/: __init__.py  autonomy_engine.py  triggers.py
ghost/cognition/: __init__.py  bdi_engine.py  belief_system.py  cognitive_core.py  cognitive_orchestrator.py  validator.py
ghost/core/: __init__.py  config.py  events.py  events_listener.py  interfaces.py  orchestrator.py  speech_governor.py
ghost/cryostasis/: __init__.py  controller.py  monitor.py
ghost/emotion/: __init__.py  circadian.py  emotion_service.py  pad_model.py
ghost/inference/: __init__.py  inference_service.py  ollama_client.py  prompt_builder.py
ghost/integrations/: __init__.py  discord_adapter.py
ghost/memory/: __init__.py  conversation_threads.py  episodic_buffer.py  hierarchical_memory.py  importance_scorer.py  memory_service.py  redis_cache.py  sumamrizer.py  vector_store.py
ghost/sensors/: __init__.py  activity_sensor.py  base.py  file_sensor.py  hardware_sensor.py  time_sensor.py
ghost/utils/: __init__.py  logging_config.py  retry.py  validation.py
scripts/: generate_synthetic_data.py  migrate_v1.py  process_discord_data.py  seed_personality.py  setup.sh
tests/: __init__.py  conftest.py
tests/fixtures/: mock_services.py
tests/integration/: test_orchestrator.py
tests/unit/: test_autonomy.py  test_emotion.py  test_inference.py  test_memory.py
